# embd_restful

./: README.md
gin-mock/: main.go
gin-mock/app/handlers/: call_history_handler.go  ping_handler.go
gin-mock/app/models/: call.go  call_history.go
gin-mock/database/: db_call_history.go
gin-mock/routers/: routers.go
gmux_mock/: main.go
gmux_mock/app/handlers/: call_history_handler.go  ping_handler.go
gmux_mock/app/models/: sip_account.go
gmux_mock/database/: db_call_history.go
gmux_mock/routers/: routers.go
pistache-mock/: CMakeLists.txt  Toolchain-RaspberryPi.cmake
pistache-mock/app/include/database/: db_call_history.hpp
pistache-mock/app/include/handlers/: call_history_handler.hpp  led_handler.hpp
pistache-mock/app/src/: main.cpp
pistache-mock/app/src/database/: db_call_history.cpp
pistache-mock/app/src/handlers/: call_history_handler.cpp  led_handler.cpp
recipes/: add_atomic.patch  orcania.bb  pistache.bb  pistache_mock.bb  ulfius.bb  ulfius_mock.bb  yder.bb
ulfius/: CMakeLists.txt  README.md  load_db.sh
ulfius/app/include/database/: database.h  db_call.h  db_call_history.h  db_sip_account.h
ulfius/app/include/resource/: call.h  call_history.h  led.h  sip_account.h
ulfius/app/src/: main.c
ulfius/app/src/database/: db_call.c  db_call_history.c  db_sip_account.c
ulfius/app/src/resource/: call.c  call_history.c  led.c  sip_account.c
